--- a/RMMV Package Manager/packages.config
+++ b/RMMV Package Manager/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Indieteur.BasicLoggingSystem" version="1.0.0" targetFramework="net45" />
+  <package id="Indieteur.ChecksumZIP" version="1.0.0" targetFramework="net45" />
   <package id="Indieteur.SimpleDatabaseFormat" version="1.0.0" targetFramework="net45" />
   <package id="Indieteur.SteamAppsManAndVDFAPI" version="1.0.2" targetFramework="net45" />
 </packages>
